fixed text alignment

--- a/page2.css
+++ b/page2.css
@@ -35,3 +35,7 @@ footer {
     margin-left: 200px;
     margin-right: 200px;
 }
+
+ul {
+  text-align: left;
+}
