--- a/page3.css
+++ b/page3.css
@@ -16,8 +16,8 @@ header {
 }
 
 main {
-    background-color: rgba(240, 248, 255,.7);
-    text-align: left;
+    background-color: aliceblue;
+    text-align: center;
     border-radius: 10px;
     width: 650px;
     margin: 0 auto;
@@ -26,7 +26,7 @@ main {
 }
 
 footer {
-    background-color: rgba(240, 248, 255,.7);
+    background-color: aliceblue;
     width: auto;
     height: 40px;
     border-radius: 10px;
@@ -34,5 +34,8 @@ footer {
     margin: 20px;
     margin-left: 200px;
     margin-right: 200px;
-    opacity: 0.5;
+}
+
+ul {
+  text-align: left;
 }
